Fixes All Verses button display on mobile

--- a/src/components/allVersesMenu.module.css
+++ b/src/components/allVersesMenu.module.css
@@ -6,5 +6,11 @@
     border-width: 2px;
     background:rgb(66, 106, 238);
     border-radius: 2px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    padding-left: 0;
+    padding-right: 0;
+    margin: 0;
+    min-width: 90px;
 }
   
